--- a/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
+++ b/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
@@ -1,4 +1,4 @@
 <h3>{{ show?.name }}</h3>
 <p>{{ show?.date }}</p>
 
-<button mat-raised-button>Add Race</button>
+<button mat-raised-button [routerLink]="'create-race'">Add Race for this Show</button>
