--- a/ui/rl/src/app/app.component.html
+++ b/ui/rl/src/app/app.component.html
@@ -13,4 +13,6 @@
   </button>
 </mat-toolbar>
 
-<router-outlet></router-outlet>
+<div class="main-stage">
+  <router-outlet></router-outlet>
+</div>
