--- a/ui/rl/projects/song/src/lib/songs.component.html
+++ b/ui/rl/projects/song/src/lib/songs.component.html
@@ -1,1 +1,21 @@
 <h1>Songs</h1>
+
+<table mat-table *ngIf="songs$ | async as songs" [dataSource]="songs" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Title</th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="artist">
+      <th mat-header-cell *matHeaderCellDef>Artist</th>
+      <td mat-cell *matCellDef="let element"> {{element.artist}} </td>
+    </ng-container>
+    
+    <tr mat-header-row *matHeaderRowDef="['name', 'artist']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['name', 'artist'];"></tr>
+  </table>
+  
+
+
+<button mat-button [routerLink]="'create'">Add Song</button>
