--- a/ui/rl/src/app/app.component.scss
+++ b/ui/rl/src/app/app.component.scss
@@ -1,3 +1,18 @@
 .toolbar-spacer {
     flex: 1 1 auto;
+}
+
+.main-stage {
+
+  margin: 1em;
+  padding: 1em;
+
+  hr {
+    margin: 0 30px !important;
+    color :#999;
+    border-style: none;
+    border-top-style:dotted;
   }
+  
+
+ }
