--- a/ui/rl/projects/song/src/lib/song-input/create-song.component.html
+++ b/ui/rl/projects/song/src/lib/song-input/create-song.component.html
@@ -11,5 +11,8 @@
             <input matInput placeholder="i.e. Britney Spears or Queen" formControlName="artist">
         </mat-form-field>
     </div>
+    <div>
+            <mat-checkbox formControlName="selectable">Selectable</mat-checkbox>
+    </div>
     <button mat-raised-button color="primary" (click)="createSong()">Speichern</button>
 </div>
