--- a/ui/rl/projects/song-search/src/lib/input/input.component.html
+++ b/ui/rl/projects/song-search/src/lib/input/input.component.html
@@ -1,9 +1,9 @@
-<form class="example-form" *ngIf="songs && filteredOptions">
-    <mat-form-field class="example-full-width">
-      <mat-label>Number</mat-label>
+<form *ngIf="songs && filteredOptions">
+    <mat-form-field class="full-width">
+      <mat-label>{{label}}</mat-label>
       <input type="text"
-             placeholder="Pick one"
-             aria-label="Number"
+             placeholder="Pick a Song"
+             aria-label="Pick a Song"
              matInput
              [formControl]="songControl"
              [matAutocomplete]="auto">
