--- a/ui/rl/projects/song/src/lib/songs.component.html
+++ b/ui/rl/projects/song/src/lib/songs.component.html
@@ -2,6 +2,14 @@
 
 <table mat-table *ngIf="songs$ | async as songs" [dataSource]="songs" class="mat-elevation-z8">
 
+    <ng-container matColumnDef="selectable">
+      <th mat-header-cell *matHeaderCellDef><mat-icon>checkbox</mat-icon></th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon *ngIf="element.selectable">check-box</mat-icon>
+        <mat-icon *ngIf="!element.selectable">block</mat-icon>
+
+      </td>
+    </ng-container>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Title</th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -12,10 +20,27 @@
       <td mat-cell *matCellDef="let element"> {{element.artist}} </td>
     </ng-container>
     
-    <tr mat-header-row *matHeaderRowDef="['name', 'artist']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['name', 'artist'];"></tr>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let element"> 
+        <button mat-icon-button aria-label="Delete Song" (click)="deleteSong(element)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        <button *ngIf="element.selectable" mat-icon-button aria-label="Block Song" (click)="blockSong(element)">
+            <mat-icon>block</mat-icon>
+          </button>
+        <button *ngIf="!element.selectable" mat-icon-button aria-label="Unblock Song" (click)="unblockSong(element)">
+            <mat-icon>check-box</mat-icon>
+          </button>
+      </td>
+    </ng-container>
+    
+    <tr mat-header-row *matHeaderRowDef="['selectable', 'artist', 'name', 'actions']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['selectable', 'artist', 'name', 'actions'];"></tr>
   </table>
   
 
+<ui-button-list>
 
-<button mat-button [routerLink]="'create'">Add Song</button>
+    <button mat-raised-button color="primary" [routerLink]="'create'">Add Song</button>
+</ui-button-list>
