--- a/ui/rl/src/styles.scss
+++ b/ui/rl/src/styles.scss
@@ -2,3 +2,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+hr {
+    margin: 0 30px !important;
+    color :#999;
+    border-style: none;
+    border-top-style:dotted;
+  }
+  
+  .mat-table {
+    width: 100%;
+  }
