--- a/ui/rl/projects/ui/button-list/src/lib/button-list/button-list.component.scss
+++ b/ui/rl/projects/ui/button-list/src/lib/button-list/button-list.component.scss
@@ -1,5 +1,6 @@
 .button-list-wrapper {
     margin-top:2em;
+    margin-bottom:1em;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
