--- a/ui/rl/projects/show/src/lib/shows/shows.component.html
+++ b/ui/rl/projects/show/src/lib/shows/shows.component.html
@@ -1,15 +1,53 @@
 <h2>Shows</h2>
 
 <h3>Aktive Shows</h3>
-<div *ngIf="currentShows$">
-    <lib-show *ngFor="let show of currentShows$ | async; index as i" [show]="show" [routerLink]="show.id"></lib-show>
-</div>
 
-<hr>
+<table mat-table *ngIf="currentShows$ | async as currentShows" [dataSource]="currentShows" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef><mat-icon>calendar-month</mat-icon></th>
+      <td mat-cell *matCellDef="let element" [routerLink]="element.id">
+        {{ element.date | date: "YYYY-MM-dd HH:mm" }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element" [routerLink]="element.id"> {{element.name}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let element"> 
+        <button *ngIf="!element.checked" mat-icon-button aria-label="Add Race" [routerLink]="element.id + '/create-race'">
+            <mat-icon>add-box</mat-icon>
+          </button>
+      </td>
+    </ng-container>
+    
+    <tr mat-header-row *matHeaderRowDef="['date', 'name', 'actions']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['date', 'name', 'actions'];"></tr>
+</table>
+
 
 <h3>Vergangene Shows</h3>
-<div *ngIf="oldShows$">
-    <lib-show *ngFor="let show of oldShows$ | async; index as i" [show]="show"></lib-show>
-</div>
 
-<button mat-button [routerLink]="'create'">Add Show</button>
+<table mat-table *ngIf="oldShows$ | async as oldShows" [dataSource]="oldShows" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef><mat-icon>calendar-month</mat-icon></th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.date | date: "YYYY-MM-dd HH:mm" }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="['date', 'name']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['date', 'name'];"></tr>
+  </table>
+
+ <ui-button-list>
+     <button mat-raised-button [routerLink]="'create'">Add Show</button>
+ </ui-button-list>
