--- a/ui/rl/projects/show/src/lib/shows/shows.component.html
+++ b/ui/rl/projects/show/src/lib/shows/shows.component.html
@@ -5,7 +5,7 @@
 <table mat-table *ngIf="currentShows$ | async as currentShows" [dataSource]="currentShows" class="mat-elevation-z8">
 
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef><mat-icon>calendar-month</mat-icon></th>
+      <th mat-header-cell *matHeaderCellDef><mat-icon>calendar_month</mat-icon></th>
       <td mat-cell *matCellDef="let element" [routerLink]="element.id">
         {{ element.date | date: "YYYY-MM-dd HH:mm" }}
       </td>
@@ -34,7 +34,7 @@
 <table mat-table *ngIf="oldShows$ | async as oldShows" [dataSource]="oldShows" class="mat-elevation-z8">
 
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef><mat-icon>calendar-month</mat-icon></th>
+      <th mat-header-cell *matHeaderCellDef><mat-icon>calendar_month</mat-icon></th>
       <td mat-cell *matCellDef="let element">
         {{ element.date | date: "YYYY-MM-dd HH:mm" }}
       </td>
