fixes offline icons issue and adds validation to race input form

--- a/ui/rl/projects/show/src/lib/create-race/create-race.component.html
+++ b/ui/rl/projects/show/src/lib/create-race/create-race.component.html
@@ -19,5 +19,6 @@
         <lib-song-auto-complete label="Song for White Bike" formControlName="song2"></lib-song-auto-complete>
     </div>
 
-    <button mat-raised-button color="primary" (click)="createRace()">Speichern</button>
+    <button mat-raised-button color="primary" (click)="createRace()" [disabled]="form.invalid">Speichern</button>
 </div>
+<pre>{{ form.getRawValue() | json }}</pre>
