--- a/ui/rl/src/styles.scss
+++ b/ui/rl/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'material-icons/iconfont/material-icons.css';
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
@@ -28,3 +30,5 @@ hr {
     padding: 0.5em !important;
     margin: 3em 0em 1em !important;
   }
+
+  
