--- a/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
+++ b/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
@@ -27,6 +27,15 @@
         <td mat-cell *matCellDef="let element"> {{element.song1.artist}}<br/>{{element.song1.name}} </td>
       </ng-container>
   
+    <ng-container matColumnDef="blackBikeWon">
+        <th mat-header-cell *matHeaderCellDef>-</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button aria-label="Mark Race as won by black Bike" (click)="bikeWon(1, element)">
+            <mat-icon>sports_score</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+  
     <ng-container matColumnDef="person2">
         <th mat-header-cell *matHeaderCellDef>Rider White Bike</th>
         <td mat-cell *matCellDef="let element"> {{element.person2}} </td>
@@ -36,6 +45,16 @@
         <th mat-header-cell *matHeaderCellDef>Song White Bike</th>
         <td mat-cell *matCellDef="let element"> {{element.song2.artist}}<br/>{{element.song2.name}} </td>
       </ng-container>
+
+      <ng-container matColumnDef="whiteBikeWon">
+        <th mat-header-cell *matHeaderCellDef>-</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button aria-label="Mark Race as won by white Bike" (click)="bikeWon(2, element)">
+            <mat-icon>sports_score</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
       
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
@@ -49,8 +68,8 @@
       </td>
     </ng-container>
     
-    <tr mat-header-row *matHeaderRowDef="['orderNumber', 'person1', 'song1', 'person2', 'song2', 'actions']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['orderNumber', 'person1', 'song1', 'person2', 'song2', 'actions'];"></tr>
+    <tr mat-header-row *matHeaderRowDef="['orderNumber', 'person1', 'song1', 'blackBikeWon' ,'person2', 'song2', 'whiteBikeWon', 'actions']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['orderNumber', 'person1', 'song1', 'blackBikeWon', 'person2', 'song2', 'whiteBikeWon', 'actions'];"></tr>
   </table>
 
 
@@ -67,25 +86,39 @@
     </ng-container>
     <ng-container matColumnDef="person1">
       <th mat-header-cell *matHeaderCellDef>Rider Black Bike</th>
-      <td mat-cell *matCellDef="let element"> {{element.person1}} </td>
+      <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '1' ? 'winning-bike' : '' }}"> {{element.person1}} </td>
     </ng-container>
   
     <ng-container matColumnDef="song1">
         <th mat-header-cell *matHeaderCellDef>Song Black Bike</th>
-        <td mat-cell *matCellDef="let element"> {{element.song1.artist}}<br/>{{element.song1.name}} </td>
+        <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '1' ? 'winning-bike' : '' }}"> {{element.song1.artist}}<br/>{{element.song1.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="blackBikeWon">
+        <th mat-header-cell *matHeaderCellDef>-</th>
+        <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '1' ? 'winning-bike' : '' }}">
+            <mat-icon *ngIf="element.bikeWon == '1'">sports_score</mat-icon>
+        </td>
       </ng-container>
   
     <ng-container matColumnDef="person2">
         <th mat-header-cell *matHeaderCellDef>Rider White Bike</th>
-        <td mat-cell *matCellDef="let element"> {{element.person2}} </td>
+        <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '2' ? 'winning-bike' : '' }}"> {{element.person2}} </td>
       </ng-container>
   
       <ng-container matColumnDef="song2">
         <th mat-header-cell *matHeaderCellDef>Song White Bike</th>
-        <td mat-cell *matCellDef="let element"> {{element.song2.artist}}<br/>{{element.song2.name}} </td>
+        <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '2' ? 'winning-bike' : '' }}"> {{element.song2.artist}}<br/>{{element.song2.name}} </td>
       </ng-container>
       
-    <ng-container matColumnDef="actions">
+      <ng-container matColumnDef="whiteBikeWon">
+        <th mat-header-cell *matHeaderCellDef>-</th>
+        <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '2' ? 'winning-bike' : '' }}">
+            <mat-icon *ngIf="element.bikeWon == '2'">sports_score</mat-icon>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element"> 
         <button *ngIf="!element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsRaced(element)">
@@ -97,6 +130,6 @@
       </td>
     </ng-container>
     
-    <tr mat-header-row *matHeaderRowDef="['orderNumber', 'person1', 'song1', 'person2', 'song2', 'actions']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['orderNumber', 'person1', 'song1', 'person2', 'song2', 'actions'];"></tr>
+    <tr mat-header-row *matHeaderRowDef="['orderNumber', 'person1', 'song1', 'blackBikeWon' ,'person2', 'song2', 'whiteBikeWon', 'actions']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['orderNumber', 'person1', 'song1', 'blackBikeWon', 'person2', 'song2', 'whiteBikeWon', 'actions'];"></tr>
   </table>
