--- a/ui/rl/projects/song-search/src/lib/input/input.component.scss
+++ b/ui/rl/projects/song-search/src/lib/input/input.component.scss
@@ -1,3 +1,13 @@
 .full-width {
     width: 100%;
 }
+
+.alreadyWished {
+    background-color: rgb(255, 255, 128);
+    color: black;
+}
+
+.alreadyPlayed {
+    background-color: rgb(255, 206, 206);
+    color: rgb(46, 0, 0);
+}
