--- a/ui/rl/projects/show/src/lib/create-show/create-show.component.html
+++ b/ui/rl/projects/show/src/lib/create-show/create-show.component.html
@@ -6,5 +6,5 @@
         </mat-form-field>
     </div>
 
-    <button mat-raised-button color="primary" (click)="createShow()">Speichern</button>
+    <button mat-flat-button color="primary" (click)="createShow()">Speichern</button>
 </div>
