--- a/ui/rl/projects/song/src/lib/song-input/create-song.component.html
+++ b/ui/rl/projects/song/src/lib/song-input/create-song.component.html
@@ -1,3 +1,4 @@
+<h2>Add Song</h2>
 <div *ngIf="form" [formGroup]="form">
     <div>
         <mat-form-field appearance="outline">
@@ -14,5 +15,5 @@
     <div>
             <mat-checkbox formControlName="selectable">Selectable</mat-checkbox>
     </div>
-    <button mat-raised-button color="primary" (click)="createSong()">Speichern</button>
+    <button mat-flat-button color="primary" (click)="createSong()">Speichern</button>
 </div>
