--- a/ui/rl/projects/song/src/lib/songs.component.html
+++ b/ui/rl/projects/song/src/lib/songs.component.html
@@ -1,11 +1,27 @@
 <h1>Songs</h1>
 
-<div *ngIf="filterForm" [formGroup]="filterForm">
+<div style="display: flex; flex-direction: row; justify-content: flex-start; align-items: baseline; align-content: flex-start; gap: 15px;">
+
+  <div *ngIf="filterForm" [formGroup]="filterForm">
+    <div>
+        <mat-form-field appearance="outline">
+            <mat-label>Filter</mat-label>
+            <input matInput placeholder="i.e. Toxic or Total Eclipse of the Heart..." formControlName="filter">
+        </mat-form-field>
+    </div>
+  </div>
+  
   <div>
-      <mat-form-field appearance="outline">
-          <mat-label>Filter</mat-label>
-          <input matInput placeholder="i.e. Toxic or Total Eclipse of the Heart..." formControlName="filter">
-      </mat-form-field>
+    <ui-button-list>
+      <button mat-flat-button color="primary" [routerLink]="'create'">
+        <mat-icon>add</mat-icon>
+        Add Song
+      </button>
+      <button mat-flat-button color="primary" [routerLink]="'sync'">
+        <mat-icon>sync</mat-icon>
+        Sync Songs
+      </button>
+  </ui-button-list>
   </div>
 </div>
 
@@ -50,6 +66,5 @@
   
 
 <ui-button-list>
-
-    <button mat-raised-button color="primary" [routerLink]="'create'">Add Song</button>
+    <button mat-flat-button color="primary" [routerLink]="'create'">Add Song</button>
 </ui-button-list>
