--- a/ui/rl/projects/show/src/lib/create-show/create-show.component.html
+++ b/ui/rl/projects/show/src/lib/create-show/create-show.component.html
@@ -6,5 +6,22 @@
         </mat-form-field>
     </div>
 
+    <div>
+        <mat-form-field appearance="outline">
+            <mat-label>Date</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="date">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+    </div>
+
+    <div>
+        <mat-form-field appearance="outline">
+            <mat-label>Start Time</mat-label>
+            <input matInput placeholder="i.e. 22:00" formControlName="time" type="time">
+        </mat-form-field>
+    </div>
+
     <button mat-flat-button color="primary" (click)="createShow()">Speichern</button>
 </div>
