--- a/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.scss
+++ b/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.scss
@@ -5,3 +5,7 @@ table td {
 .winning-bike {
     background-color: lightpink;
 }
+
+.black-bike-won-icon, .white-bike-won-icon {
+    border-right: 1px dotted #999;
+}
