adds snackbar notifications and erros, modifies list of shows, implements fast add-race-to-current-show button

--- a/ui/rl/projects/show/src/lib/create-race/create-race.component.html
+++ b/ui/rl/projects/show/src/lib/create-race/create-race.component.html
@@ -1,3 +1,7 @@
+<ng-container *ngIf="show$ | async as show">
+  <h2>Adding Race for Show: {{show.name}}</h2>
+</ng-container>
+
 <div *ngIf="form" [formGroup]="form">
     <div>
         <mat-form-field appearance="outline">
