--- a/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
+++ b/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
@@ -12,7 +12,7 @@
   <ng-container *ngIf="races.length > 0" >
 
     <table mat-table [dataSource]="races">
-    
+
         <ng-container matColumnDef="orderNumber">
           <th mat-header-cell *matHeaderCellDef><mat-icon>tag</mat-icon></th>
           <td mat-cell *matCellDef="let element">
@@ -23,12 +23,12 @@
           <th mat-header-cell *matHeaderCellDef>Rider Black Bike</th>
           <td mat-cell *matCellDef="let element"> {{element.person1}} </td>
         </ng-container>
-      
+
         <ng-container matColumnDef="song1">
             <th mat-header-cell *matHeaderCellDef>Song Black Bike</th>
             <td mat-cell *matCellDef="let element"> {{element.song1.artist}}<br/>{{element.song1.name}} </td>
           </ng-container>
-      
+
         <ng-container matColumnDef="blackBikeWon">
             <th mat-header-cell *matHeaderCellDef>-</th>
             <td mat-cell *matCellDef="let element" class="black-bike-won-icon">
@@ -37,17 +37,17 @@
               </button>
             </td>
           </ng-container>
-      
+
         <ng-container matColumnDef="person2">
             <th mat-header-cell *matHeaderCellDef>Rider White Bike</th>
             <td mat-cell *matCellDef="let element"> {{element.person2}} </td>
           </ng-container>
-      
+
           <ng-container matColumnDef="song2">
             <th mat-header-cell *matHeaderCellDef>Song White Bike</th>
             <td mat-cell *matCellDef="let element"> {{element.song2.artist}}<br/>{{element.song2.name}} </td>
           </ng-container>
-    
+
           <ng-container matColumnDef="whiteBikeWon">
             <th mat-header-cell *matHeaderCellDef>-</th>
             <td mat-cell *matCellDef="let element" class="white-bike-won-icon">
@@ -56,11 +56,11 @@
               </button>
             </td>
           </ng-container>
-    
-          
+
+
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
-          <td mat-cell *matCellDef="let element"> 
+          <td mat-cell *matCellDef="let element">
             <button *ngIf="!element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsPlayBoth(element)">
               <mat-icon matBadge="2" matBadgeColor="warn">sports_score</mat-icon>
               </button>
@@ -71,9 +71,12 @@
             <button *ngIf="element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsNotRaced(element)">
                 <mat-icon>check_box</mat-icon>
               </button>
+            <button mat-icon-button aria-label="Update Song" [routerLink]="'race/' +element.id">
+                <mat-icon>edit</mat-icon>
+              </button>
           </td>
         </ng-container>
-        
+
         <tr mat-header-row *matHeaderRowDef="['orderNumber', 'person1', 'song1', 'blackBikeWon' ,'person2', 'song2', 'whiteBikeWon', 'actions']"></tr>
         <tr mat-row *matRowDef="let row; columns: ['orderNumber', 'person1', 'song1', 'blackBikeWon', 'person2', 'song2', 'whiteBikeWon', 'actions'];"></tr>
       </table>
@@ -86,7 +89,7 @@
     <h3>Past Races</h3>
 
     <table mat-table [dataSource]="finishedRaces">
-    
+
         <ng-container matColumnDef="orderNumber">
           <th mat-header-cell *matHeaderCellDef><mat-icon>tag</mat-icon></th>
           <td mat-cell *matCellDef="let element">
@@ -97,39 +100,39 @@
           <th mat-header-cell *matHeaderCellDef>Rider Black Bike</th>
           <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '1' || element.bikeWon == '3' ? 'winning-bike' : '' }}"> {{element.person1}} </td>
         </ng-container>
-      
+
         <ng-container matColumnDef="song1">
             <th mat-header-cell *matHeaderCellDef>Song Black Bike</th>
             <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '1' || element.bikeWon == '3' ? 'winning-bike' : '' }}"> {{element.song1.artist}}<br/>{{element.song1.name}} </td>
           </ng-container>
-    
+
           <ng-container matColumnDef="blackBikeWon">
             <th mat-header-cell *matHeaderCellDef>-</th>
             <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '1' || element.bikeWon == '3' ? 'winning-bike' : '' }}">
                 <mat-icon *ngIf="element.bikeWon == '1' || element.bikeWon == '3'">sports_score</mat-icon>
             </td>
           </ng-container>
-      
+
         <ng-container matColumnDef="person2">
             <th mat-header-cell *matHeaderCellDef>Rider White Bike</th>
             <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '2' || element.bikeWon == '3' ? 'winning-bike' : '' }}"> {{element.person2}} </td>
           </ng-container>
-      
+
           <ng-container matColumnDef="song2">
             <th mat-header-cell *matHeaderCellDef>Song White Bike</th>
             <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '2' || element.bikeWon == '3' ? 'winning-bike' : '' }}"> {{element.song2.artist}}<br/>{{element.song2.name}} </td>
           </ng-container>
-          
+
           <ng-container matColumnDef="whiteBikeWon">
             <th mat-header-cell *matHeaderCellDef>-</th>
             <td mat-cell *matCellDef="let element" class="{{ element.bikeWon == '2' || element.bikeWon == '3' ? 'winning-bike' : '' }}">
                 <mat-icon *ngIf="element.bikeWon == '2' || element.bikeWon == '3'">sports_score</mat-icon>
             </td>
           </ng-container>
-    
+
           <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
-          <td mat-cell *matCellDef="let element"> 
+          <td mat-cell *matCellDef="let element">
             <button *ngIf="!element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsRaced(element)">
                 <mat-icon>check_box_outline_blank</mat-icon>
               </button>
@@ -138,7 +141,7 @@
               </button>
           </td>
         </ng-container>
-        
+
         <tr mat-header-row *matHeaderRowDef="['orderNumber', 'person1', 'song1', 'blackBikeWon' ,'person2', 'song2', 'whiteBikeWon', 'actions']"></tr>
         <tr mat-row *matRowDef="let row; columns: ['orderNumber', 'person1', 'song1', 'blackBikeWon', 'person2', 'song2', 'whiteBikeWon', 'actions'];"></tr>
       </table>
