--- a/ui/rl/projects/show/src/lib/shows/shows.component.html
+++ b/ui/rl/projects/show/src/lib/shows/shows.component.html
@@ -4,11 +4,11 @@
   <button mat-flat-button color="primary" [routerLink]="'create'">Add Show</button>
 </ui-button-list>
 
-<ng-container *ngIf="currentShows$ | async as currentShows">
+<ng-container *ngIf="shows$ | async as currentShows">
   <ng-container *ngIf="currentShows.length > 0">
     <h3 >Aktive Shows</h3>
     <table mat-table [dataSource]="currentShows">
-    
+
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef><mat-icon>calendar_month</mat-icon></th>
           <td mat-cell *matCellDef="let element" [routerLink]="element.id">
@@ -19,43 +19,31 @@
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let element" [routerLink]="element.id"> {{element.name}} </td>
         </ng-container>
-      
+
+      <ng-container matColumnDef="active">
+        <th mat-header-cell *matHeaderCellDef>Running</th>
+        <td mat-cell *matCellDef="let element"> <mat-icon *ngIf="element.active">check</mat-icon> </td>
+      </ng-container>
+
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
-          <td mat-cell *matCellDef="let element"> 
-            <button *ngIf="!element.checked" mat-icon-button aria-label="Add Race" [routerLink]="element.id + '/create-race'">
-                <mat-icon>add-box</mat-icon>
-              </button>
-          </td>
-        </ng-container>
-        
-        <tr mat-header-row *matHeaderRowDef="['date', 'name', 'actions']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['date', 'name', 'actions'];"></tr>
-    </table>
-  </ng-container>
-</ng-container>
-
-
-<ng-container *ngIf="oldShows$ | async as oldShows">
-  <ng-container *ngIf="oldShows.length > 0">
-
-    <h3>Vergangene Shows</h3>
-
-    <table mat-table *ngIf="oldShows$ | async as oldShows" [dataSource]="oldShows">
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef><mat-icon>calendar_month</mat-icon></th>
           <td mat-cell *matCellDef="let element">
-            {{ element.date | date: "YYYY-MM-dd HH:mm" }}
+            <button *ngIf="!element.active" mat-icon-button aria-label="Start Show" (click)="toggleActive(element)">
+              <mat-icon>play_circle</mat-icon>
+            </button>
+
+            <button *ngIf="element.active" mat-icon-button aria-label="Stop Show" (click)="toggleActive(element)">
+              <mat-icon>stop</mat-icon>
+            </button>
+            &nbsp;
+            <button mat-icon-button aria-label="Add Race" [routerLink]="element.id + '/create-race'">
+              <mat-icon>add-box</mat-icon>
+            </button>
           </td>
         </ng-container>
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="['date', 'name']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['date', 'name'];"></tr>
-      </table>
 
+        <tr mat-header-row *matHeaderRowDef="['date', 'name', 'active', 'actions']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['date', 'name', 'active' ,'actions'];" class="{{ row.active ? 'active-show': '' }}"></tr>
+    </table>
   </ng-container>
 </ng-container>
