--- a/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
+++ b/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
@@ -6,6 +6,9 @@
 
 <ng-container *ngIf="races$ | async as races">
   <h3>Upcoming Races</h3>
+  <div class="refresh-bar">
+    <mat-progress-bar *ngIf="refreshing" mode="indeterminate"></mat-progress-bar>
+  </div>
   <ng-container *ngIf="races.length <= 0" >
     <p>No Races yet</p>
   </ng-container>
@@ -26,13 +29,18 @@
 
         <ng-container matColumnDef="song1">
             <th mat-header-cell *matHeaderCellDef>Song Black Bike</th>
-            <td mat-cell *matCellDef="let element"> {{element.song1.artist}}<br/>{{element.song1.name}} </td>
+            <td mat-cell
+              *matCellDef="let element"
+              [ngClass]="{'alreadyPlayed': element.song1AlreadyPlayed, 'alreadyWished': element.song1AlreadyWished }">
+              <mat-icon matBadgeColor="warn" *ngIf="element.song1AlreadyPlayed">error</mat-icon>
+              {{element.song1.artist}}<br/>{{element.song1.name}}
+            </td>
           </ng-container>
 
         <ng-container matColumnDef="blackBikeWon">
             <th mat-header-cell *matHeaderCellDef>-</th>
             <td mat-cell *matCellDef="let element" class="black-bike-won-icon">
-              <button mat-icon-button aria-label="Mark Race as won by black Bike" (click)="bikeWon(1, element)">
+              <button mat-icon-button aria-label="Mark Race as won by black Bike" (click)="bikeWon(1, element)" [disabled]="refreshing">
                 <mat-icon>sports_score</mat-icon>
               </button>
             </td>
@@ -45,13 +53,18 @@
 
           <ng-container matColumnDef="song2">
             <th mat-header-cell *matHeaderCellDef>Song White Bike</th>
-            <td mat-cell *matCellDef="let element"> {{element.song2.artist}}<br/>{{element.song2.name}} </td>
+            <td mat-cell
+              *matCellDef="let element"
+              [ngClass]="{'alreadyPlayed': element.song2AlreadyPlayed, 'alreadyWished': element.song2AlreadyWished }">
+              <mat-icon matBadgeColor="warn" *ngIf="element.song2AlreadyPlayed">error</mat-icon>
+              {{element.song2.artist}}<br/>{{element.song2.name}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="whiteBikeWon">
             <th mat-header-cell *matHeaderCellDef>-</th>
             <td mat-cell *matCellDef="let element" class="white-bike-won-icon">
-              <button mat-icon-button aria-label="Mark Race as won by white Bike" (click)="bikeWon(2, element)">
+              <button mat-icon-button aria-label="Mark Race as won by white Bike" (click)="bikeWon(2, element)"  [disabled]="refreshing">
                 <mat-icon>sports_score</mat-icon>
               </button>
             </td>
@@ -61,17 +74,17 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let element">
-            <button *ngIf="!element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsPlayBoth(element)">
+            <button *ngIf="!element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsPlayBoth(element)"  [disabled]="refreshing">
               <mat-icon matBadge="2" matBadgeColor="warn">sports_score</mat-icon>
               </button>
               &nbsp;
-            <button *ngIf="!element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsRaced(element)">
+            <button *ngIf="!element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsRaced(element)" [disabled]="refreshing">
                 <mat-icon>check_box_outline_blank</mat-icon>
               </button>
-            <button *ngIf="element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsNotRaced(element)">
+            <button *ngIf="element.raced" mat-icon-button aria-label="Delete Song" (click)="markRaceAsNotRaced(element)" [disabled]="refreshing">
                 <mat-icon>check_box</mat-icon>
               </button>
-            <button mat-icon-button aria-label="Update Song" [routerLink]="'race/' +element.id">
+            <button mat-icon-button aria-label="Update Song" [routerLink]="'race/' +element.id" [disabled]="refreshing">
                 <mat-icon>edit</mat-icon>
               </button>
           </td>
@@ -143,7 +156,9 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="['orderNumber', 'person1', 'song1', 'blackBikeWon' ,'person2', 'song2', 'whiteBikeWon', 'actions']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['orderNumber', 'person1', 'song1', 'blackBikeWon', 'person2', 'song2', 'whiteBikeWon', 'actions'];"></tr>
+        <tr mat-row
+          *matRowDef="let row; columns: ['orderNumber', 'person1', 'song1', 'blackBikeWon', 'person2', 'song2', 'whiteBikeWon', 'actions'];"
+          [ngClass]="{'not-raced': row.bikeWon === 0}"></tr>
       </table>
   </ng-container>
 </ng-container>
